<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_event">Nama Event</string>
    <string name="description_event">Deskripsi Event</string>
    <string name="type_event">Jenis Event</string>
    <string name="status_event">Status Event</string>
    <string name="description_photo">Event Foto</string>
    <string name="organize_event">Penyelenggara</string>
    <string name="kuota_event">Kapasitas\n</string>
    <string name="time_event">Waktu Pelaksanaan</string>
    <string name="btn_register">Daftar Sekarang!</string>
    <string name="event_detail">Detail Event</string>
    <string name="title_result_search">Event:</string>
    <string name="search_hint">Cari Event..</string>
    <string name="search_title">Search</string>
    <string name="no_results_found">Event Not Found!</string>
    <string name="title_settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="title_favorite">Favorite</string>
    <string name="save_bookmark">Save Favorite?</string>
</resources>