<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_photo"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/description_photo"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/name_event"
                    android:textAlignment="center"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_detail_organizer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/organize_event"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:paddingTop="16dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_detail_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/time_event"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail_organizer"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_detail_quota"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/kuota_event"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail_time"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_detail_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/type_event"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail_quota"
                        android:textColor="@color/black"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:justificationMode="inter_word"
                    android:text="@string/description_event"
                    android:textSize="15sp"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/btn_register"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/detail_event_loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
