<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginStart="3dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="3dp"
    android:layout_marginBottom="6dp"
    card_view:cardCornerRadius="21dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="165dp"
            android:layout_height="165dp"
            card_view:cardCornerRadius="21dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="165dp"
                android:layout_height="165dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:maxLines="2"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            card_view:layout_constraintEnd_toEndOf="@+id/cardView"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/cardView"
            card_view:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:text="@string/name_event" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="3"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:text="@string/description_event" />

        <TextView
            android:id="@+id/tv_item_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:textAlignment="center"
            android:textStyle="italic"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_description"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_description"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_description"
            tools:text="@string/type_event" />

        <TextView
            android:id="@+id/tv_item_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_type"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_type"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_type"
            tools:text="@string/status_event" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>