<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.finished.FinishedFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/collapsingToolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="2dp"
        app:contentInsetStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logoScaleType="centerCrop"
        app:titleCentered="false">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchBar_event"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_hint" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_search_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collapsingToolBarLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_finished_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_result_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_search_result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingTop="20dp"
        android:text="@string/title_result_search"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_search_result" />

    <ProgressBar
        android:id="@+id/finished_loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
